Fix: logout missing from header on mobile

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -27,10 +27,10 @@ header {
 }
 
 header .logout-btn {
-  display: none;
+  /* display: none;
   @media (min-width: 800px) {
     display: block;
-  }
+  } */
 }
 
 .logo {
